add chain handler to write aws s3 url to MongoDb
